{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 7,
  "lineage": "b7f8f825-f9d9-7862-7936-4843701df340",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553623752835:vpc/vpc-05af766ff93df1b5c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a7ed633c33f5a80b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02543c141a80b12fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "vpc-05af766ff93df1b5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e2c6b5b3d9e608b",
            "owner_id": "553623752835",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553623752835:loadbalancer/app/test/26ff0821ed320fad",
            "arn_suffix": "app/test/26ff0821ed320fad",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-1062934365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:553623752835:loadbalancer/app/test/26ff0821ed320fad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00479f504e670ca2f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030049ee4b91cd129"
              },
              {
                "subnet_id": "subnet-0317f06f3fc3ee1ef"
              },
              {
                "subnet_id": "subnet-09568e8c653ad87e8"
              },
              {
                "subnet_id": "subnet-0be51243c4eda1879"
              },
              {
                "subnet_id": "subnet-0cfedb0074d945860"
              },
              {
                "subnet_id": "subnet-0fd8b23087c39ccc6"
              }
            ],
            "subnets": [
              "subnet-030049ee4b91cd129",
              "subnet-0317f06f3fc3ee1ef",
              "subnet-09568e8c653ad87e8",
              "subnet-0be51243c4eda1879",
              "subnet-0cfedb0074d945860",
              "subnet-0fd8b23087c39ccc6"
            ],
            "vpc_id": "vpc-05af766ff93df1b5c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.this",
            "data.aws_subnets.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553623752835:listener/app/test/26ff0821ed320fad/10b6e66cc4ce9179",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553623752835:targetgroup/test-target-group/d48d51fab6d03916",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553623752835:listener/app/test/26ff0821ed320fad/10b6e66cc4ce9179",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:553623752835:loadbalancer/app/test/26ff0821ed320fad",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.this",
            "aws_lb_target_group.this",
            "aws_security_group.this",
            "data.aws_subnets.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553623752835:targetgroup/test-target-group/d48d51fab6d03916",
            "arn_suffix": "targetgroup/test-target-group/d48d51fab6d03916",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553623752835:targetgroup/test-target-group/d48d51fab6d03916",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05af766ff93df1b5c"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553623752835:security-group/sg-00479f504e670ca2f",
            "description": "Security Group for ALB test",
            "egress": [],
            "id": "sg-00479f504e670ca2f",
            "ingress": [],
            "name": "test-alb-sg",
            "name_prefix": "",
            "owner_id": "553623752835",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05af766ff93df1b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "access_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "188.247.102.134/32"
            ],
            "description": "Allow connecting from my ip",
            "from_port": 80,
            "id": "sgrule-3522792020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00479f504e670ca2f",
            "security_group_rule_id": "sgr-0e4e2b2fcbd68fa37",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "data.aws_vpc.this",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic",
            "from_port": 8080,
            "id": "sgrule-3978359679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00479f504e670ca2f",
            "security_group_rule_id": "sgr-054bc64b0a6881be2",
            "self": false,
            "source_security_group_id": "sg-00479f504e670ca2f",
            "timeouts": null,
            "to_port": 8080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}